Fixed spacing on contact title graphic.

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -7,8 +7,8 @@
 
 .contact_FX {
   width: 30%;
-  float: left;
-  margin: 6% 0 3% 6%;
+  float: right;
+  margin: 6% 6% 3% 0%;
 }
 
 .ContactWrap {
